tests/base/valid/Package_Import_1.whiley
import * from whiley.lang.* 
import * from whiley.io.*


void ::main(System.Console sys):
	x = 1
	y = 2
	sys.out.println(x+y)