tests/base/invalid/List_CompileFail_4.whiley
import * from whiley.lang.*

void ::main(System.Console sys):
     x = 1
     y = x[0]

